<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SpewDP</string>
    <string name="action_settings">Settings</string>
    <string name="ip_label">IP Address/Hostname</string>
    <string name="ip_hint">What server are you trying to ping?</string>
    <string name="port_label">Port Number</string>
    <string name="port_hint">What port is it listening on?</string>
    <string name="start_button_label">Start Spewing!</string>
    <string name="stop_button_label">Stop Spewing</string>
    <string name="policy_label">Selected Policy</string>
    <string name="abandon_ship">Abandon Ship!</string>
    <string name="bouncer">Bouncer</string>
    <string name="third_one">\?\?\?</string>

    <string-array name="policies_array">
        <item>@string/abandon_ship</item>
        <item>@string/bouncer</item>
        <item>@string/third_one</item>
    </string-array>
    
    <string name="policy_switch_label">Switch</string>

</resources>