<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ip_label"
        android:textColor="#0099CC"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/ip_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ip_hint" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/port_label"
        android:textColor="#0099CC"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/port_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/port_hint"
        android:inputType="number" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/policy_label"
        android:textColor="#0099CC"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/policy_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/policies_array" />

    <Button
        android:id="@+id/service_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp" />

    <!--
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/policy_label"
        android:textColor="#0099CC"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Spinner
            android:id="@+id/policy_spinner"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:entries="@array/policies_array" />

        <Button
            android:id="@+id/policy_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="switchPolicy"
            android:text="@string/policy_switch_label" />
    </LinearLayout>
    -->

</LinearLayout>